Formatted login and signup handlebars. Added signup route to homeRoutes. Added logic to login, logout, and signup js files.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,3 +42,11 @@ a {
   background-color: rgb(200, 223, 212);
   color: rgb(53, 33, 33);
 }
+
+.btn-secondary {
+  width: 100%;
+}
+
+.signUp {
+  color:blue;
+}
