--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
+  <title>The Tech Blog</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -18,7 +18,7 @@
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/" class="" id="logout">Logout</a>
       </nav>
-      <button type="button" class="btn btn-lg">Tech Blog</button>
+      <button type="button" class="btn btn-lg">The Tech Blog</button>
     </header>
     <main class="container container-fluid container-sm">
       {{{body}}}
