--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,8 @@
 <div class="card row">
   <div class="card-header">
-    <p>Login</p>
+    <p>Sign Up</p>
   </div>
-  <div class="card-body login-form">
+  <div class="card-body signup-form">
     <div class="mb-3">
       <label for="inputUsername" class="form-label">Username</label>
       <input type="text" class="form-control" id="inputUsername">
@@ -11,9 +11,9 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword">
     </div>  
-      <button class="btn btn-secondary" type="button">Login!</button>
-      <a class="signUp" href="./signup">Sign up instead</a> 
+      <button class="btn btn-secondary" type="button">Sign Up!</button>
+      <a class="signUp" href="./login">Login instead</a> 
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="./js/signup.js"></script>
