Fixed syntax errors in package.json, handlebars, and userRoutes, spelling error in user model. Used better naming conv in login and signup js files. Finished seeds js to test app and routes.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <div class="card-header">
     <p>Sign Up</p>
   </div>
-  <div class="card-body signup-form">
+  <form class="card-body signup-form">
     <div class="mb-3">
       <label for="inputUsername" class="form-label">Username</label>
       <input type="text" class="form-control" id="inputUsername">
@@ -11,9 +11,9 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword">
     </div>  
-      <button class="btn btn-secondary" type="button">Sign Up!</button>
+      <button class="btn btn-secondary" type="submit">Sign Up!</button>
       <a class="signUp" href="./login">Login instead</a> 
-  </div>
+  </form>
 </div>
 
 <script src="./js/signup.js"></script>
