--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <div class="card-header">
     <p>Login</p>
   </div>
-  <div class="card-body login-form">
+  <form class="card-body login-form">
     <div class="mb-3">
       <label for="inputUsername" class="form-label">Username</label>
       <input type="text" class="form-control" id="inputUsername">
@@ -11,9 +11,9 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword">
     </div>  
-      <button class="btn btn-secondary" type="button">Login!</button>
-      <a class="signUp" href="./signup">Sign up instead</a> 
-  </div>
+    <button class="btn btn-secondary" type="submit">Login!</button>
+    <a class="signUp" href="./signup">Sign up instead</a> 
+  </form>
 </div>
 
 <script src="./js/login.js"></script>
