Pushing to Heroku

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,7 +16,9 @@
 
   <div class="row mb-2">
     <div class="col-md-4">
-      <button class="btn" data-id="{{post.id}}">Add Post</button>
+      <button class="btn btnCreate" data-id="{{post.id}}">
+        <a href="/addPosts"> + New Post </a>
+      </button>
     </div>
   </div>
 </div>
